--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 <main>
 <div class="scrollscreen">
-    <img src="/scroll/img1.jpg">
-    <img src="/scroll/img2.jpg">
-    <img src="/scroll/img3.jpg">
+    <img src="https://github.com/a0r1i2s5a/scrollWebDesign/blob/main/scroll/img1.jpg?raw=true">
+    <img src="https://github.com/a0r1i2s5a/scrollWebDesign/blob/main/scroll/img2.jpg?raw=true">
+    <img src="https://github.com/a0r1i2s5a/scrollWebDesign/blob/main/scroll/img3.jpg?raw=true">
  </div>
  <div class="bcktext">
     <p>Nature</p>
